cmake_minimum_required(VERSION 3.28)
project(OKIPLOPL)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(main main.cpp)
add_executable(inputOutputC 1-inputOutput/1-inputOutputC.cpp)
add_executable(inputOutputCpp 1-inputOutput/2-inputOutputCpp.cpp)
add_executable(limits 2-types/1-limits.cpp)
add_executable(format 2-types/2-format.cpp)
add_executable(string 2-types/3-string.cpp)
add_executable(oop 3-oop/1-oop.cpp)
add_executable(polymorphism 3-oop/2-polymorphism.cpp)
add_executable(control 4-control/1-control.cpp)
add_executable(pointersIterators 5-pointersIterators/1-pointersIterators.cpp)
add_executable(sortMinMax 6-functionsAlgorithms/1-sortMinMax.cpp)
add_executable(sortMinMaxOwnType 6-functionsAlgorithms/2-sortMinMaxOwnType.cpp)
add_executable(search 6-functionsAlgorithms/3-search.cpp)
add_executable(array 7-structures/1-array.cpp)
add_executable(vector 7-structures/2-vector.cpp)
add_executable(list 7-structures/3-list.cpp)
add_executable(stack 7-structures/4-stack.cpp)
add_executable(queue 7-structures/5-queue.cpp)
add_executable(priorityQueue 7-structures/6-priorityQueue.cpp)
add_executable(deque 7-structures/7-deque.cpp)
add_executable(set 7-structures/8-set.cpp)
add_executable(bitset 7-structures/9-bitset.cpp)
add_executable(pair 7-structures/10-pair.cpp)
add_executable(map 7-structures/11-map.cpp)
add_executable(unorderedMap 7-structures/12-unorderedMap.cpp)
add_executable(mapInsertionOrder 7-structures/13-mapInsertionOrder.cpp)
add_executable(unorderedMapInsertionOrder 7-structures/14-unorderedMapInsertionOrder.cpp)
